chore: update dependencies and add CI/CD workflows for Firebase Hosting
- Updated firebase-tools from ^13.6.0 to ^13.35.1 in devDependencies.
- Updated webpack-cli from ^3.3.12 to ^6.0.1 in devDependencies.
- Added firebase as a new dependency with version ^11.6.0.
- Created GitHub Actions workflow for deploying to Firebase Hosting on merge to main.
- Created GitHub Actions workflow for deploying to Firebase Hosting on pull requests.
- Added nodesource_setup.sh script for installing Node.js on Debian-based systems.

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "fireship-lessons"
-  }
+    "default": "cicd-6051c",
+    "goat": "cicd-6051c"
+  },
+  "targets": {},
+  "etags": {}
 }
