--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "firebase-tools": "^13.6.0",
+    "firebase-tools": "^13.35.1",
     "jest": "^29.7.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^6.0.1"
   },
   "dependencies": {
+    "firebase": "^11.6.0",
     "react-scripts": "^5.0.1",
     "terser": "^4.6.6"
   }
